--- a/benify2.html
+++ b/benify2.html
@@ -151,7 +151,7 @@
 <div style=" background-color:#8ea1af; padding-bottom:200px;">
 <!--img src="imgs/timeline-background.png" style="position:absolute; width:40%; margin-left:18%; margin-top:30vh;"-->
   <div style="text-align:center;">
-    <img src="imgs/design-process-loop.gif" style="width:130%; max-width:1000px; height:auto;">
+    <img src="imgs/design-process-loop.gif" style="width:130%; overflow:hidden; max-width:1000px; height:auto;">
   </div>
   <div style="text-align:center;">
     <h3 style="opacity:0.5; font-size:80%;"></h3>
