--- a/benify2.html
+++ b/benify2.html
@@ -196,12 +196,12 @@
 
 
   <body id="zero" style="position: relative;">
-
+<div style="overflow-x:hidden; background-color:#8ea1af;">
 <!--Top Benify-->
 <div style=" background-color:#8ea1af; padding-bottom:200px;">
 <!--img src="imgs/timeline-background.png" style="position:absolute; width:40%; margin-left:18%; margin-top:30vh;"-->
   <div style="text-align:center;">
-    <img src="imgs/design-process-loop.gif" style="width:100%; height:auto;">
+    <img src="imgs/design-process-loop.gif" style="width:100%; min-width:500px; height:auto;">
   </div>
   <div style="text-align:center;">
     <h3 style="opacity:0.5; font-size:80%;"></h3>
@@ -316,7 +316,7 @@
     </div>
   </div>
   </div>
-  </div>
+
   <!--MODAL WF1 End-->
 
   <!--MODAL - WF2-->
@@ -348,7 +348,7 @@
     </div>
   </div>
   </div>
-  </div>
+
   <!--MODAL WF2 End-->
 
     <!--MODAL - WF3-->
@@ -380,7 +380,7 @@
       </div>
     </div>
     </div>
-    </div>
+
     <!--MODAL WF3 End-->
 
       <!--MODAL - WF4-->
@@ -412,8 +412,9 @@
         </div>
       </div>
       </div>
-      </div>
+
       <!--MODAL WF4 End-->
+    </div>
 
   </body>
 </html>
