--- a/dailyui.html
+++ b/dailyui.html
@@ -91,7 +91,7 @@
       <h2>Daily UI - 001</h2>
       <h3>Sign Up Form</h3>
       <div class="imgs-border">
-        <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_001.png">
+        <img class="imgs-ui" src="imgs/dailyui_001.png">
       </div>
       <p class="date"><br>2017-01-03</p>
     </div>
