--- a/dailyui.html
+++ b/dailyui.html
@@ -55,7 +55,7 @@
       <h2>Daily UI - 005</h2>
       <h3>App Icon</h3>
       <div class="imgs-border">
-        <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_005.png">
+        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_005.png">
       </div>
       <p id="two" class="date"><br>2017-01-07</p>
     </div>
