--- a/dailyui.html
+++ b/dailyui.html
@@ -64,7 +64,7 @@
       <h2>Daily UI - 004</h2>
       <h3>Calculator</h3>
       <div class="imgs-border">
-        <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_004.png">
+        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_004.png">
       </div>
       <p class="date"><br>2017-01-06</p>
     </div>
@@ -73,7 +73,7 @@
       <h2>Daily UI - 003</h2>
       <h3>Landing Page</h3>
       <div class="imgs-border">
-        <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_003.png">
+        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_003.png">
       </div>
       <p class="date"><br>2017-01-05</p>
     </div>
@@ -82,7 +82,7 @@
       <h2>Daily UI - 002</h2>
       <h3>Credit Card Checkout</h3>
       <div class="imgs-border">
-        <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_002.png">
+        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_002.png">
       </div>
       <p class="date"><br>2017-01-04</p>
     </div>
@@ -91,7 +91,7 @@
       <h2>Daily UI - 001</h2>
       <h3>Sign Up Form</h3>
       <div class="imgs-border">
-        <img class="imgs-ui" src="imgs/dailyui-imgs/DailyUI_001.png">
+        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_001.png">
       </div>
       <p class="date"><br>2017-01-03</p>
     </div>
