--- a/dailyui.html
+++ b/dailyui.html
@@ -48,7 +48,7 @@
 
     <a class="scroll"><div class="float-bar">
       NEXT<br>
-      <i class="fa fa-sort-desc" aria-hidden="true"></i>
+      <!--i class="fa fa-sort-desc" aria-hidden="true"></i-->
     </div></a>
 
     <div class="container-ui">
