--- a/dailyui.html
+++ b/dailyui.html
@@ -5,7 +5,7 @@
       <meta name = "viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1.0">
       <meta name="author" content="oscarlund">
 
-      <title>Design Process - Benify</title>
+      <title>Daily UI - Osvar Lund</title>
       <!--Bootstrap-->
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/stylesheet.css" rel="stylesheet">
