--- a/dailyui.html
+++ b/dailyui.html
@@ -58,7 +58,7 @@
         <!--i class="fa fa-sort-desc" aria-hidden="true"></i-->
       </div></a>
     <a class="scroll"><div class="float-bar">
-      NEXT<br>
+      DOWN<br>
       <!--i class="fa fa-sort-desc" aria-hidden="true"></i-->
     </div></a>
 
